1.13 -> 1.14:
    - jbj: updated vi.po and zh_CN.po (Translation Project).
    - jbj: fix: keep the poptHelpOptions array exactly the same size.
    - jbj: updated pl.po (Translation Project).
    - jbj: add new fi, th, zh_TW translations (Translation Project).
    - jbj: add "make updatepo" to simplify PO file maintenance.
    - jbj: display POPT_ARG_ARGV options in --help just like other options.
    - jbj: add test for POPT_ARG_ARGV handling.
    - jbj: fix: permit "--foo bar" and "--foo=bar" equivalent forms for aliases.
    - jbj: fix: tests 20 -> 23 require an explicit '--' arg separator now.
    - jbj: popt.3: add POPT_ARG_ARGV description.
    - jbj: use NUL terminator to align help with (possible) multibyte chars.
    - jbj: add utf8_skip_data table[] to keep track of utf8 character widths.
    - jbj: refactor the POPT_WCHAR_HACK into stringDisplayWidth().
    - jbj: add POPT_dgettext() prototype.
    - jbj: add POPT_dgettext() for popt internal UTF-8 codeset (Takao Fujiwara).
    - jbj: add POPT_next_char(), backout POPT_fprintf() usage (for the moment).
    - jbj: finish POPT_ARG_ARGV implementation.
    - jbj: free aliases/execs with common code.
    - jbj: rewrite the callback logic using a switch for simplicity.
    - jbj: hide bit field structure behind F_ISSET/LF_ISSET/CBF_ISSET macros.
    - jbj: expose poptSaveLongLong and poptSaveString in the loader map.
    - jbj: add POPT_ARG_ARGV, starting with the poptSaveString() method.
    - jbj: add help for POPT_ARG_LONGLONG.
    - jbj: hmmm, POSIXly correct --echo-args needs fixing, disable for now.
    - jbj: poptint.h: typedef's for string and string arrays.
    - jbj: add POPT_ARG_LONGLONG, and poptSaveLongLong().
    - jbj: poptint.h: add poptSubstituteHelpI18N() to bury the ABI hack.
    - jbj: start using poptArg and poptArgType() where useful.
    - jbj: poptint.h: add a poptArgType define for bitfield type abstraction.
    - jbj: poptint.h: add a poptArg union for opt->arg access without casts.